--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>this is my first github Repo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quia doloremque nostrum ea iure suscipit et iusto aperiam harum esse.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro facilis nulla voluptatum!</p>
+    
 </body>
 </html>
