--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-Second-Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>this is my first github Repo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quia doloremque nostrum ea iure suscipit et iusto aperiam harum esse.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro facilis nulla voluptatum!</p>
-    
+
 </body>
 </html>
